--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,14 @@
     <h1>Quiz API</h1><hr>
     <h2>Quizzes urls</h2>
     <ul>
-        <li>get all quizzes <b>https://intense-escarpment-15602.herokuapp.com/quizzes</b></li>
-        <li>get a unique quiz <b>https://intense-escarpment-15602.herokuapp.com/quizzes/:id</b></li>
+        <li>get all quizzes <b>https://agile-hamlet-19111.herokuapp.com/quizzes</b></li>
+        <li>get a unique quiz <b>https://agile-hamlet-19111.herokuapp.com/quizzes/:id</b></li>
     </ul>
     <hr>
     <h2>users urls</h2>
     <ul>
-        <li>get all users <b>https://intense-escarpment-15602.herokuapp.com/users</b></li>
-        <li>get all user completed quizzes <b>https://intense-escarpment-15602.herokuapp.com/users/:id/completed-quizzes</b></li>
+        <li>get all users <b>https://agile-hamlet-19111.herokuapp.com/users</b></li>
+        <li>get all user completed quizzes <b>https://agile-hamlet-19111.herokuapp.com/users/:id/completed-quizzes</b></li>
     </ul>
 </body>
 </html>
